# 18-Mini_Project/Postaway_II/src/features/comments/comments.router.js
@@ -20,7 +20,7 @@ commentRouter.put("/updateComment/:postId", (req, res, next) => {
   commentController.updateComment(req, res, next);
 });
 
-commentRouter.delete("/deleteComment", (req, res, next) => {
+commentRouter.delete("/deleteComment/:commentId", (req, res, next) => {
   commentController.deleteComment(req, res, next);
 });
 
